Fix text overflowing so that the ellipsis are not always blue.

--- a/app/ng-weekly-scheduler.less
+++ b/app/ng-weekly-scheduler.less
@@ -47,6 +47,9 @@
 
       span {
         color: #fff;
+        display: block;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
   }
@@ -266,11 +269,9 @@ br-multi-slider {
     }
 
     .middle {
-      overflow: hidden;
       padding: 0 4px;
       font-family: monospace;
       font-size: x-small;
-      text-overflow: ellipsis;
     }
 
     .handle {
